<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="app_title">My Nanodegree Apps!</string>
    <string name="app_1">Spotify Streamer</string>
    <string name="app_2_1">Scores App</string>
    <string name="app_2_2">Library App</string>
    <string name="app_3">Build It Bigger</string>
    <string name="app_4">XYZ Reader</string>
    <string name="app_5">Capstone: My Own App</string>

</resources>
