<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/material_deep_teal_50" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:textColor="@color/black"
            android:text="@string/app_title"
            android:id="@+id/textView"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:text="@string/app_1"
            android:id="@+id/streamer"
            android:background="@color/material_deep_teal_500"
            android:onClick="open"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:text="@string/app_2_1"
                android:id="@+id/scores"
                android:background="@color/material_deep_teal_500"
                android:onClick="open"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/app_2_2"
                android:id="@+id/library"
                android:background="@color/material_deep_teal_500"
                android:onClick="open"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/app_3"
            android:id="@+id/bigger"
            android:background="@color/material_deep_teal_500"
            android:onClick="open"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/app_4"
            android:id="@+id/xyz"
            android:background="@color/material_deep_teal_500"
            android:onClick="open"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_5"
            android:id="@+id/capstone"
            android:textColor="@color/black"
            android:background="@color/material_deep_teal_200"
            android:onClick="open"/>

    </LinearLayout>
</RelativeLayout>
